[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/png/flyingEnemies/flying/frame-2.png" type="Texture" id=1]
[ext_resource path="res://Assets/png/flyingEnemies/flying/frame-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/png/flyingEnemies/flying/frame-4.png" type="Texture" id=3]
[ext_resource path="res://Assets/png/flyingEnemies/got hit/frame-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/png/flyingEnemies/flying/frame-3.png" type="Texture" id=5]
[ext_resource path="res://Assets/png/flyingEnemies/got hit/frame-2.png" type="Texture" id=6]
[ext_resource path="res://scripts/playerFollower.gd" type="Script" id=7]
[ext_resource path="res://Assets/Animations/playerFollower.tres" type="Animation" id=8]
[ext_resource path="res://Assets/music_and_bg/bird_death.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0754

[sub_resource type="CircleShape2D" id=2]
radius = 342.626

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 30.0403

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[node name="playerFollower" type="KinematicBody2D"]
z_index = 4
collision_layer = 4
collision_mask = 41
script = ExtResource( 7 )
damage = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 8 )

[node name="Position2D" type="Position2D" parent="."]

[node name="kill_range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_range"]
shape = SubResource( 1 )

[node name="detection_range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_range"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="collision_range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_range"]
modulate = Color( 0.941176, 0.909804, 0.105882, 1 )
position = Vector2( 1.62901, 0 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1.432 )
rotation = -0.523599
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 5 )
animation = "flying"
frame = 3
playing = true

[node name="attackTimer" type="Timer" parent="."]
autostart = true

[node name="music" type="Node" parent="."]

[node name="death" type="AudioStreamPlayer" parent="music"]
stream = ExtResource( 9 )
[connection signal="body_entered" from="kill_range" to="." method="_on_kill_range_body_entered"]
[connection signal="body_entered" from="detection_range" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="detection_range" to="." method="_on_detection_range_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="collision_range" to="." method="_on_collision_range_body_entered"]
[connection signal="body_exited" from="collision_range" to="." method="_on_collision_range_body_exited"]
[connection signal="timeout" from="attackTimer" to="." method="_on_attackTimer_timeout"]
